Removing arrow from the title

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -505,7 +505,7 @@ es:
       conversations: Conversaciones
       task_lists: Tareas
       all_task_lists: Mis listas de tareas
-      project_settings: Mi cuenta
+      project_settings: Proyecto
       all_pages: Mis páginas
       people: Personas
       pages: Páginas
