--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -180,6 +180,7 @@ en:
       new_task_list_link: New Task List
       people_in_project: People in this project
       subscribe: Subscribe to the news feed
+      tip: Mentioning somebody's @username they will receive an email with your message
       rss:
         title: "{{name}}"
         description: "Recent activities for the project {{name}}"
