--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -406,6 +406,7 @@ en:
       reorder: Reorder
     index:
       add_link: New Task List
+      empty: No tasks in this category!
     primer:
       empty: This project doesn't have any conversations yet.
       create_first: Create the first task list in this project!
@@ -764,12 +765,12 @@ en:
         one:   "over 1 year"
         other: "over {{count}} years"
     prompts:
-      year:   "Año"
-      month:  "Mes"
-      day:    "Día"
-      hour:   "Hora"
-      minute: "Minuto"
-      second: "Segundo"
+      year:   "Year"
+      month:  "Month"
+      day:    "Day"
+      hour:   "Hour"
+      minute: "Minute"
+      second: "Second"
 
   activerecord:
     models:
