Autorefresh for Project#index, with sound effect. Using AJAX requests to poll data.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -167,6 +167,7 @@ en:
       projects: My Projects
       subscribe: Subscribe to the news feed
       new_project: New Project
+      refreshes: Refreshes every minute
       rss:
         title: Projects Overview
         description: Overview of all your projects
