--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -17,6 +17,7 @@ es:
   confirm:
     delete_task_list: ¿Seguro que quieres borrar esta lista de tareas?
     delete_task: ¿Seguro que quieres borrar esta tarrea?
+    delete_page: ¿Seguro que quieres borrar esta página?
     delete_upload: ¿Seguro que quieres borrar este archivo?
   deleted:
     conversation: "Se ha borrado la conversación <b>{{name}}</b>"
