Internet Explorer 6 upgrade banner

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -565,6 +565,13 @@ en:
       nobody_watching: "Nobody is watching"
       started_watching: "You will now be notified by email of updates."
       stopped_watching: "You will no longer receive notifications for this item."
+    upgrade_browser:
+      upgrade: You're using an outdated version of Internet Explorer. Teambox may not work properly under this version.
+      ie: Upgrade to Internet Explorer
+      or_install: or install
+      chrome: "Chrome,"
+      firefox: "Firefox"
+      safari: "Safari"
 
   date:
     yesterday: Yesterday
