Footer for notification settings on emails. Cleaning email replies

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -665,8 +665,9 @@ en:
       project: "Teambox Project:"
       view_online: "You can <a href='{{link}}'>view this conversation online</a> to answer and attach files."
       reply: "You can also answer to this email to post a reply in the conversation."
-      are_watching: " are suscribed to this conversation, and will be notified of future replies."
-      notification_settings: "You can go go Teambox to <a href='{{stop_watching_url}}'>stop watching this conversation</a>."
+      are_watching: " are suscribed to this conversation, and will be notified of future replies."      
+      stop_watching: "<a href='{{stop_watching_url}}'>Stop watching</a> this thread to stop receiving email notifications."
+      notification_settings: "You can change your <a href='{{url}}'>notification settings</a> for further emails."
       comment: "Comment on project's wall: "
       conversation: "Conversation:"
       task: "Task:"
