--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -666,7 +666,8 @@ es:
       view_online: "Puedes <a href='{{link}}'>entrar a Teambox</a> para contestar y adjuntar archivos."
       reply: "También puedes contestar a este email para publicar una respuesta."
       are_watching: " están suscritos a la conversación, y serán notificados de las respuestas futuras."
-      notification_settings: "Puedes <a href='{{stop_watching_url}}'>dejar de seguir esta conversación</a> en cualquier momento."
+      stop_watching: "<a href='{{stop_watching_url}}'>Deja de seguir</a> este elemento para no recibir más emails sobre él."
+      notification_settings: "Puedes cambiar tus <a href='{{url}}'>preferencias de notificación</a> para los siguientes emails."
       comment: "Comentario en la pared del proyecto: "
       conversation: "Conversación:"
       task: "Tarea:"
